Fixed layout issue with repeating styles

--- a/scss/views/_location.scss
+++ b/scss/views/_location.scss
@@ -95,6 +95,7 @@
 					color: #aaa;
 					white-space: normal;
 					text-align: right;
+					margin: 0;
 				}
 			}
 		}
